--- a/gaetapp/package.json
+++ b/gaetapp/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "gaetapp",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "axios": "^1.10.0"
+    "axios": "^1.6.8",
+    "pinia": "^3.0.3",
+    "vue": "^3.4.15",
+    "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.8",
+    "vite-plugin-vue-devtools": "^7.7.7"
   }
 }
