--- a/gaetapp/frontend/package.json
+++ b/gaetapp/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gaetapp",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,8 +14,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^7.0.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.7"
   }
 }
