actualziacion de backend

--- a/gaetapp/backend/.env
+++ b/gaetapp/backend/.env
@@ -1,6 +1,7 @@
 PORT=3000
-DB_HOST=localhost
+DB_USER=gaet
+DB_PASSWORD=1qazWSX3edc,.-
+DB_HOST=38.242.237.107
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=4321
 DB_NAME=db_gaet
+PROTOCOLO=http
