--- a/gaetapp/backend/.env
+++ b/gaetapp/backend/.env
@@ -1,7 +1,22 @@
+# backend/.env
+NODE_ENV=development
 PORT=3000
-DB_USER=gaet
-DB_PASSWORD=1qazWSX3edc,.-
-DB_HOST=38.242.237.107
+
+# URLs permitidas para CORS
+FRONTEND_URL=http://localhost:5173
+
+# Configuración de Base de Datos PostgreSQL
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=db_gaet
-PROTOCOLO=http
+DB_NAME=gaet_db
+DB_USER=postgres
+DB_PASSWORD=tu_password_aqui
+
+# Configuración de JWT
+JWT_SECRET=gaet-super-secret-key-2024-change-in-production
+JWT_EXPIRES_IN=24h
+
+# Configuración de Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX=5
