--- a/gaetapp/frontend/.env
+++ b/gaetapp/frontend/.env
@@ -1,1 +1,4 @@
-VITE_API_URL=http://localhost:3000/api
+# frontend/.env
+VITE_API_BASE_URL=http://localhost:3000/api
+VITE_APP_NAME=GAET
+VITE_APP_VERSION=1.0.0
