--- a/gaetapp/backend/.env
+++ b/gaetapp/backend/.env
@@ -1,22 +1,15 @@
 # backend/.env
 NODE_ENV=development
 PORT=3000
-
-# URLs permitidas para CORS
 FRONTEND_URL=http://localhost:5173
 
-# Configuración de Base de Datos PostgreSQL
-DB_HOST=localhost
+# Configuración de Base de Datos en VPS
+DB_HOST=38.242.237.107
 DB_PORT=5432
-DB_NAME=gaet_db
-DB_USER=postgres
-DB_PASSWORD=tu_password_aqui
+DB_NAME=db_gaet
+DB_USER=gaet
+DB_PASSWORD=1qazWSX3edc,.-
 
-# Configuración de JWT
+# JWT
 JWT_SECRET=gaet-super-secret-key-2024-change-in-production
 JWT_EXPIRES_IN=24h
-
-# Configuración de Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-AUTH_RATE_LIMIT_MAX=5
