--- a/gaetapp/backend/package.json
+++ b/gaetapp/backend/package.json
@@ -31,38 +31,38 @@
   "author": "Daniel Pereira",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
-    "exceljs": "^4.4.0",
-    "moment": "^2.29.4",
-    "uuid": "^9.0.1",
-    "express-validator": "^7.0.1",
-    "cookie-parser": "^1.4.6"
+    "pg": "^8.11.3",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.8",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
-    "@types/jest": "^29.5.8"
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
